<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gamezone.loliman.lolimanzgame.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <RelativeLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayer_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_shape"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:hint="@string/prompt_email"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/png_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayer_02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputLayer_01"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:background="@drawable/edit_shape"
                android:hint="@string/prompt_password"
                android:drawablePadding="5dp"
                android:drawableLeft="@drawable/png_password"
                android:imeActionId="6"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox_01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputLayer_02"
            android:button="@drawable/checkbox_shape"
            android:layout_marginTop="@dimen/icon_height"
            android:paddingLeft="5dp"
            android:text="@string/checkbox_remeber_username"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkBox_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/checkBox_01"
            android:layout_alignBottom="@+id/checkBox_01"
            android:layout_toEndOf="@+id/checkBox_01"
            android:layout_marginLeft="60dp"
            android:button="@drawable/checkbox_shape"
            android:paddingLeft="5dp"
            android:text="@string/checkbox_auto_login"
            android:textSize="18sp" />

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/checkBox_02"
            android:layout_marginTop="60dp"
            android:background="@drawable/btn_shape"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>
